# Archi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  PUBLISHING.md  STATUS.md
docs/architecture/: 2026-07-18-archive-roadmap-design.md  2026-07-22-sevenz-pack-copy-spike.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  archive_edit.rs  bzip2_format.rs  cli_open.rs  commands.rs  conflict.rs  create_common.rs  extraction.rs  file_assoc.rs  format_detect.rs  gzip_format.rs  io_perf.rs  lib.rs  main.rs  models.rs  operations.rs  security.rs  sevenz_edit.rs  sevenz_format.rs  sevenz_pack_copy.rs  tar_create.rs  tar_edit.rs  tar_format.rs  testing.rs  windows_fs.rs  xz_format.rs  zip_cd.rs  zip_edit.rs  zipper.rs
src-tauri/tests/: archive_listing.rs  archive_test.rs  conflict_names.rs  ensure_directory.rs  extraction.rs  operations_conflict.rs  security.rs  sevenz.rs  sevenz_edit.rs  sevenz_pack_copy_spike.rs  tar_create.rs  tar_edit.rs  tar_gzip.rs  zip_edit.rs  zipper.rs
src-tauri/tests/common/: mod.rs
src/components/: ArchiveSearchBar.svelte  ArchiveTable.svelte  Breadcrumbs.svelte  CreateArchiveModal.svelte  DotIcon.svelte  EmptyState.svelte  FileAssociationsModal.svelte  StatusBar.svelte  TitleBar.svelte  Toolbar.svelte
src/lib/: archiveIndex.js  archiveQuery.js  (+12 more)
(+1 files in other folders)
